--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=production MONGO_USER=joon MONGO_PASSWORD=7604632tk STRIPE_KEY=sk_test_d4QB0Rao9b0GTE8zOXBMrIOW00IwQk0YXo SEND_GRID=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 node app.js",
+    "start": "NODE_ENV=production node app.js",
     "start-server": "node app.js",
     "start:dev": "nodemon app.js"
   },
